# 00000New

./: .coverage  .gitignore  README.md  main.py  monkeytype.sqlite3  pyproject.toml  report.html
tests/: conftest.py  test_classes.py
